# hx-lsp

./: .gitignore  .ignore  Cargo.toml  LICENSE-MIT  README.md  README.zh-cn.md  typos.toml
.github/workflows/: build.yml  lint.yml  release.yml
.helix/: languages.toml
.helix/actions/: markdown.json
.helix/snippets/: global.code-snippets  html.json  markdown.json
src/: action.rs  action_inner.rs  clipboard.rs  colors.rs  config.rs  encoding.rs  env.rs  errors.rs  fuzzy.rs  lib.rs  loader.rs  lsp.rs  main.rs  markdown.rs  parser.rs  serve.rs  snippet.rs  state.rs  variables.rs
src/markdown/: list.rs  table.rs
