[package]
name = "hx-lsp"
version = "0.1.5"
authors = ["erasin <erasinoo@gmail.com>"]
edition = "2024"
description = "One LSP server support snippets and actions for helix editor."
license = "MIT"
readme = "README.md"
repository = "https://github.com/erasin/hx-lsp"
keywords = ["helix", "lsp", "snippets"]
exclude = [".helix"]

[features]
term = []

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.97"
async-lsp = { version = "0.2.2", features = ["tokio"] }
copypasta = "0.10.1"
crossbeam-channel = "0.5"
etcetera = "0.8.0"
futures = "0.3.31"
json_comments = "0.2.2"
miette = "7.2.0"
nucleo = "0.5.0"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.10.4"
ropey = "1.6.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
time = { version = "0.3.36", features = ["formatting", "local-offset"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-utils = "0.1.2"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
unicode-general-category = "0.6.0"
url = "2.5"
uuid = { version = "1.8.0", features = ["v4"] }
which = "6.0"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.3", features = ["std"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
rustix = { version = "0.38", features = ["fs"] }

[profile.release]
opt-level = "z"
lto = true
