[package]
name = "hx-lsp"
version = "0.2.10"
authors = ["erasin <erasinoo@gmail.com>"]
edition = "2024"
description = "One LSP server support snippets and actions for helix editor."
license = "MIT"
readme = "README.md"
repository = "https://github.com/erasin/hx-lsp"
keywords = ["helix", "lsp", "snippets"]
exclude = [".helix"]

[features]
term = []

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.97"
async-lsp = { version = "0.2.2", features = ["tokio"] }
comrak =  { version = "0.39.0", default-features = false}
convert_case = "0.8.0"
copypasta = "0.10.1"
crossbeam-channel = "0.5"
etcetera = "0.8.0"
futures = "0.3.31"
json_comments = "0.2.2"
miette = "7.2.0"
nucleo = "0.5.0"
parking_lot = "0.12.1"
rand = "0.9"
regex = "1.10.4"
ropey = "1.6.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
time = { version = "0.3.36", features = ["formatting", "local-offset"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
unicode-general-category = "0.6.0"
unicode-width = "0.2.0"
url = "2.5"
uuid = { version = "1.8.0", features = ["v4"] }
which = "6.0"

[target.'cfg(windows)'.dependencies]
tokio-util = { version = "0.7.15", features = ["compat"]}

[profile.release]
opt-level = "z"
lto = true

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

[dev-dependencies]
test-case = "3.3.1"
