[package]
name = "hx-lsp"
version = "0.3.0"
authors = ["erasin <erasinoo@gmail.com>"]
edition = "2024"
description = "One LSP server support snippets and actions for helix editor."
license = "MIT"
readme = "README.md"
repository = "https://github.com/erasin/hx-lsp"
keywords = ["helix", "lsp", "snippets"]
exclude = [".helix"]

[features]
term = []

[dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
async-lsp = { version = "0.2", features = ["tokio"] }
comrak = { version = "0.39", default-features = false }
convert_case = "0.8"
copypasta = "0.10"
etcetera = "0.8"
futures = "0.3"
json_comments = "0.2"
miette = "7.2"
nucleo = "0.5"
parking_lot = "0.12"
rand = "0.9"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "local-offset"] }
tokio = { version = "1.42", features = ["macros", "rt", "time", "io-util", "sync"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-general-category = "0.6"
unicode-width = "0.2"
url = "2.5"
uuid = { version = "1.8", features = ["v4"] }
which = "6.0"

[target.'cfg(windows)'.dependencies]
tokio-util = { version = "0.7", features = ["compat"] }
tokio = { version = "1.42", features = ["macros", "rt", "time", "io-util", "sync", "io-std"] }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

[dev-dependencies]
test-case = "3.3"
